# financial_chatbot_dspy

./: README.md  chatbot_optimized.json  optimize.py  pyproject.toml
app/: config.py  main.py
app/chatbot/: service.py  signatures.py
app/dataset/: dataset.py
app/evaluate/: evaluate.py  llm_as_a_judge.py  metricas.py
app/financial/: models.py  repository.py  service.py
app/tools/: financial_tools.py
data/: transactions.csv  transactions_old.csv  user.json
frontend/: app.py
