[project]
name = "financial-chatbot-dspy"
version = "2.0.0"
description = "Financial chatbot rewritten with DSPy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # DSPy — substitui langchain + langgraph
    "dspy>=2.6.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",

    # Frontend
    "streamlit>=1.35.0",

    # Dados
    "pandas>=2.2.0",
    "pydantic>=2.7.0",

    # Modelo local (mesmo do projeto original)
    "transformers>=4.40.0",
    "torch>=2.3.0",
    "accelerate>=0.30.0",
]

# [project.optional-dependencies]
# # Para usar modelos via API (OpenAI, Anthropic, etc.) ao invés de HuggingFace local
# api = [
#     "openai>=1.30.0",
#     "anthropic>=0.28.0",
# ]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
